Changelog for GEMC
==================

10/30/17
 - fixed mismatch typo for internal generator
 - preferred directions on field is "z". Added else to skip cases in expensive method GetFieldValue
 - fixed bug in dipole field calculation: the transverse coordinate was not computed correctly in some cases.

10/23/17
 - added mfield attribute for CAD volumes in cad.gxml

10/18/17
- moving GENERATED_USE_INFO_TAG bank outside the GENERATED_PARTICLES_BANK_TAG

10/17/17
 - added user info header bank, passed by generator
 - user info produced by both evio and txt output factories

10/11/17
 - user info bank defaulted to size 25, indexed by particle like the rest of the bank

10/3/17
 - added detector threshold variable detectorThreshold that can be set and used in the digitization routine in conjuction with writeHit
 - added bool detector variable writeHit to decide if a hit is written or not in the output
 - fixed bug that crashed output routine in case no hits were presented to it


8/30/17
 - do not initialize ltcc before digitization starts (not needed)
 - added two processes to catalogue
 - fixed the DC staggering indexing

8/25/17
 - fixed an issue with the header bank where the LUND info index was not correct
 - no user info for internal generator

8/24/17
 - fix to LTCC dgtz bank

8/23/17
 - fixed dc stagger units

8/20/17
 - Added TDC calibration constants to ec,pcal hitprocess

8/18/17
 - some quick fixes on bank structures: Bank 0xe10e now has num=crate-id, and the evio
   composite bank with tag='57601' ( 0xe101 ) has now num=0

8/16/17
 - reading tdc_conv for ctof from database

8/15/17
 - updated HTCC hitprocess (status and timing offset) to prepare to calibration challenge

8/11/17
 - 1st version of FADC Mode1 output implementation in EC
 - removed unused SLI in processID
 - Adjust transverse diffusion and ionization potential to reproduce cosmics and experimental data

8/10/17
 - Some fixes are implemented om evio_output.cc, i.e. missing sector 1 was fixed,